# firmware

./: .editorconfig  .gitignore  ATTENTION.md  CHANGELOG.md  LICENSE  Makefile  NOTIFY.md  README.md  building.sh  manifest.flat  manifest.json  test_building.sh
.github/: CODEOWNERS  FUNDING.yml
br-ext-chip-allwinner/: Config.in  Readme.md  external.desc  external.mk
br-ext-chip-ambarella/: Config.in  external.desc  external.mk
br-ext-chip-anyka/: Config.in  external.desc  external.mk
br-ext-chip-fullhan/: Config.in  external.desc  external.mk
br-ext-chip-goke/: Config.in  external.desc  external.mk
br-ext-chip-grainmedia/: Config.in  external.desc  external.mk
br-ext-chip-hisilicon/: Config.in  external.desc  external.mk
br-ext-chip-ingenic/: Config.in  external.desc  external.mk
br-ext-chip-novatek/: Config.in  external.desc  external.mk
br-ext-chip-rockchip/: Config.in  external.desc  external.mk
br-ext-chip-sigmastar/: Config.in  external.desc  external.mk
br-ext-chip-ti/: Config.in  external.desc  external.mk
br-ext-chip-xiongmai/: Config.in  external.desc  external.mk
contrib/: make_nfsroot  openipc-bisect
docs/: _config.yml  config_examples.md  index.md  profiles.md
general/: Config.in  external.desc  external.mk  openipc.fragment  toolchain.mk
general/package/logcat-openipc/src/logwrapper/: CMakeLists.txt  logd_write.c  logwrapper.c
scripts/: bump_gcc_everywhere.sh  clone_config_hisi2goke.sh  create_overlayed_rootfs.sh  executing_commands_for_glibc.sh  executing_commands_for_initramfs.sh  executing_commands_for_musl.sh  (+5 more)
(+15558 files in other folders)
